--- a/server/build.gradle
+++ b/server/build.gradle
@@ -13,8 +13,17 @@ repositories {
 }
 
 dependencies {
-	implementation 'org.springframework.boot:spring-boot-starter-data-mongodb'
+	implementation 'org.springframework.boot:spring-boot-starter'
 	implementation 'org.springframework.boot:spring-boot-starter-web'
+	implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
+
+	//Database
+	implementation 'org.springframework.boot:spring-boot-starter-data-mongodb'
+
+	//Swagger
+	implementation 'io.springfox:springfox-swagger2:2.9.2'
+	implementation 'io.springfox:springfox-swagger-ui:2.9.2'
+
 	testImplementation 'org.springframework.boot:spring-boot-starter-test'
 }
 
