--- a/client/package.json
+++ b/client/package.json
@@ -26,6 +26,7 @@
     "@ng-bootstrap/ng-bootstrap": "^8.0.4",
     "bootstrap": "^4.5.0",
     "http-client": "^4.3.1",
+    "material-design-icons": "^3.0.1",
     "material-icons": "^1.10.1",
     "rxjs": "~6.6.0",
     "tslib": "^2.0.0",
