--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -8,8 +8,8 @@ stages:          # List of stages for jobs, and their order of execution
 build-job:       # This job runs in the build stage, which runs first.
   stage: build
   script: 
-    -  cd server/
-    - ./gradlew build -x test
+    -  cd ./server
+    -  ./gradlew build -x test
 
 
 unit-test-job:   # This job runs in the test stage.
