--- a/client/package.json
+++ b/client/package.json
@@ -27,6 +27,7 @@
     "@material/select": "^13.0.0",
     "@ng-bootstrap/ng-bootstrap": "^8.0.4",
     "@types/chart.js": "^2.7.40",
+    "angular-bootstrap-md": "^10.1.1",
     "animate.css": "~3.7.2",
     "bootstrap": "^4.5.0",
     "chart.js": "^2.7.2",
