--- a/client/package.json
+++ b/client/package.json
@@ -35,6 +35,7 @@
     "http-client": "^4.3.1",
     "material-design-icons": "^3.0.1",
     "material-icons": "^1.10.1",
+    "react-stomp": "^5.1.0",
     "rxjs": "~6.6.0",
     "tslib": "^2.0.0",
     "zone.js": "~0.10.2"
